Fix scroll on mobile

--- a/qa_moderator/static/css/project.css
+++ b/qa_moderator/static/css/project.css
@@ -86,7 +86,8 @@ body :-ms-input-placeholder {
   width: 100%;
   height: 100%;
   /* margin-top: -200px; */
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 .wrapper.form-success .container h1 {
   -webkit-transform: translateY(85px);
